--- a/ONVIFPTZControl/App.config
+++ b/ONVIFPTZControl/App.config
@@ -2,6 +2,7 @@
 
 
 <configuration>
+	
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
    
@@ -38,6 +39,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<appSettings>
+		<add key="imagesPath" value="D:\Projects\ONVIFPTZControl\bin\Debug" />
+	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
