--- a/ONVIFPTZControl/packages.config
+++ b/ONVIFPTZControl/packages.config
@@ -19,11 +19,15 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="NLog" version="5.2.8" targetFramework="net48" />
   <package id="NLog.Extensions.Logging" version="5.3.8" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Drawing.Common" version="7.0.0" targetFramework="net472" />
   <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net48" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
@@ -34,4 +38,5 @@
   <package id="System.Text.Json" version="7.0.3" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="Twilio" version="6.16.1" targetFramework="net48" />
 </packages>
